# matching-engine

./: .dockerignore  .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  engine.http
.github/workflows/: ci.yml
config/: prometheus.yml
config/provisioning/dashboards/: matching_engine.json
scripts/: artillery.yaml  client.js  create_orders.js  read_orderbook.js
src/: main.rs  utils.rs
src/api/: buckets.rs  context.rs  disconnect.rs  error.rs  mod.rs
src/api/jwt/: alg.rs  base64.rs  mod.rs
src/config/: mod.rs
src/matcher/: mod.rs
src/model/: api_context.rs  compare.rs  market.rs  messages.rs  mod.rs  order.rs  order_book.rs  order_book_side.rs  order_type.rs  side.rs  state.rs  trade.rs  user.rs  wal.rs
trading-ui/: index.html  package.json
trading-ui/src/: App.css  App.tsx  Form.tsx  Money.tsx  OrderBookRow.tsx  index.css  model.ts
trading-ui/src/hooks/: useInterval.ts  useOrderBook.ts
