[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
