[package]
name = "matching-engine"
description = "A high-performance matching engine written in Rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "=1.0.65", features = ["backtrace"] }
clap = { version = "4.0", features = ["cargo", "derive"] }
dotenv = "0.15"
env_logger = "0.10"
envy = "0.4"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
prometheus = "0.13"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
rustix = "=0.36.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
